# firepred

./: .pre-commit-config.yaml  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: actions.yml  test.yml
data/: test.csv  train.csv
firepred/: __init__.py  __main__.py  exceptions.py  logger.py  utils.py
firepred/components/: data_ingestion.py  model_trainer.py
firepred/pipeline/: predict_pipeline.py  training_pipeline.py
firepred/routes/: home.py  predict.py
models/: LGBMClassifier.pkl  LogisticRegression.pkl  NaiveBayes.pkl  svc.pkl
notebook/: LGBMClassifier.ipynb  NaiveBayes.ipynb  SVC.ipynb  logisticRegression.ipynb  randomForest.ipynb
shell/: lint.sh
src/: logger.py  utils.py
src/components/: data_ingestion.py  model_trainer.py
src/pipeline/: predict_pipeline.py  training_pipeline.py
templates/: forest_fire.html
tests/: conftest.py  test_app.py
