[tool.poetry]
name = "firepred"
version = "0.1.0"
description = "A simple application showcasing MLOps including tracking, logging, CI&CD pipeline."
authors = ["Maaz Karim <MaazKarim02@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
matplotlib = "^3.7.2"
scikit-learn = "^1.3.0"
numpy = "^1.25.1"
pandas = "^2.0.3"
tqdm = "^4.65.0"
flask = "^2.3.2"
gunicorn = "^21.0.1"
lightgbm = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flakehell = "^0.9.0"

[tool.flakehell]
# https://flakehell.readthedocs.io/
# https://black.readthedocs.io/en/stable/compatible_configs.html?highlight=flake8#flake8
max-line-length = 88
extend-ignore = "E203, W503"
# https://github.com/flakehell/flakehell/issues/10#issuecomment-822720074
extended_default_ignore = []  # add this

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/black_compatibility/
profile = "black"

[flake8]
max-line-length = 150

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
