[tool.poetry]
name = "firepred"
version = "0.1.0"
description = "A simple application showcasing MLOps including tracking, logging, CI&CD pipeline."
authors = ["Maaz Karim <MaazKarim02@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
matplotlib = "^3.7.2"
scikit-learn = "1.2.2"
numpy = "^1.25.1"
pandas = "^2.0.3"
tqdm = "^4.65.0"
flask = "^2.3.2"
gunicorn = "^21.0.1"
lightgbm = "^4.0.0"
urllib3 = "1.26.15"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flakeheaven = "^3.3.0"

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/black_compatibility/
profile = "black"

[tool.flakeheaven.plugins]
pyflakes = ["+*", "-F401", "-W503"]

[tool.flakeheaven]
base = "https://raw.githubusercontent.com/flakeheaven/flakeheaven/main/pyproject.toml"
exclude = []
format = "grouped"
max_line_length = 90
show_source = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
